--- a/src/client/app/features/dashboard/dashboard.html
+++ b/src/client/app/features/dashboard/dashboard.html
@@ -2,15 +2,22 @@
     <header></header>
 </section>
 
-<div class="row">
-    <section class="col-md-offset-1 col-md-2">
-        <return-form></return-form>
-    </section>
-</div>
+<container>
     <div class="row">
-        <div class="col-md-offset-2 col-md-9">
-        <chart></chart>
-    </div></div>
+        <section class="col-md-offset-1 col-md-2">
+            <return-form></return-form>
+        </section>
+    </div>
+    <div class="row">
+        <section id="orderCountChart" class="col-md-offset-1 col-md-7">
+            <chart data="vm.returnOrderData" chartBasics=""></chart>
+        </section>
+        <section id="reasonChart" class="col-md-3">
+            <chart data="vm.returnReasonData" chartbasics=""></chart>
+        </section>
+    </div>
+</container>
+
 <section class="navbar navbar-center navbar-fixed-bottom">
     <footer></footer>
 </section>
