--- a/src/client/index.html
+++ b/src/client/index.html
@@ -70,11 +70,12 @@
     <script src="/src/client/app/blocks/logger/logger.module.js"></script>
     <script src="/src/client/app/blocks/router/router.module.js"></script>
     <script src="/src/client/app/components/app.components.module.js"></script>
-    <script src="/src/client/app/components/chart/chart.module.js"></script>
+    <script src="/src/client/app/components/barChart/barChart.module.js"></script>
     <script src="/src/client/app/components/container/container.module.js"></script>
-    <script src="/src/client/app/components/footer/footer.module.js"></script>
     <script src="/src/client/app/components/header/header.module.js"></script>
-    <script src="/src/client/app/components/returnForm/returnForm.module.js"></script>
+    <script src="/src/client/app/components/lineChart/lineChart.module.js"></script>
+    <script src="/src/client/app/components/returnOrderForm/returnOrderForm.module.js"></script>
+    <script src="/src/client/app/components/returnReasonForm/returnReasonForm.module.js"></script>
     <script src="/src/client/app/core/core.module.js"></script>
     <script src="/src/client/app/features/app.features.module.js"></script>
     <script src="/src/client/app/features/dashboard/dashboard.module.js"></script>
@@ -84,11 +85,12 @@
     <script src="/src/client/app/blocks/exception/exception.js"></script>
     <script src="/src/client/app/blocks/logger/logger.js"></script>
     <script src="/src/client/app/blocks/router/router-helper.provider.js"></script>
-    <script src="/src/client/app/components/chart/chart.controller.js"></script>
+    <script src="/src/client/app/components/barChart/barChart.controller.js"></script>
     <script src="/src/client/app/components/container/container.controller.js"></script>
-    <script src="/src/client/app/components/footer/footer.controller.js"></script>
     <script src="/src/client/app/components/header/header.controller.js"></script>
-    <script src="/src/client/app/components/returnForm/returnForm.controller.js"></script>
+    <script src="/src/client/app/components/lineChart/lineChart.controller.js"></script>
+    <script src="/src/client/app/components/returnOrderForm/returnOrderForm.controller.js"></script>
+    <script src="/src/client/app/components/returnReasonForm/returnReasonForm.controller.js"></script>
     <script src="/src/client/app/core/config.js"></script>
     <script src="/src/client/app/core/constants.js"></script>
     <script src="/src/client/app/core/core.route.js"></script>
@@ -96,6 +98,7 @@
     <script src="/src/client/app/features/dashboard/dashboard.controller.js"></script>
     <script src="/src/client/app/features/dashboard/dashboard.route.js"></script>
     <script src="/src/client/app/layout/shell.controller.js"></script>
+    <script src="/src/client/app/services/chart.service.js"></script>
     <script src="/src/client/app/services/rest.service.js"></script>
     <script src="/src/client/app/services/ReturnReasonServiceMock.js"></script>
     <script src="/src/client/app/services/ReturnService.js"></script>
