--- a/src/client/app/features/dashboard/dashboard.html
+++ b/src/client/app/features/dashboard/dashboard.html
@@ -2,12 +2,14 @@
     <header></header>
 </section>
 <container>
-    <div class="container">
+    <div class="container" >
         <div class="row">
             <section class="col-md-6">
                 <return-order-form startDate="vm.form.startDate" endDate="vm.form.endDate" category="vm.form.category"
                     ></return-order-form>
             </section>
+        </div>
+        <div class="row">
             <section id="orderCountChart" class="col-md-12">
                 <line-chart></line-chart>
             </section>
@@ -17,6 +19,8 @@
                 <return-reason-form startDate="vm.form.startDate" endDate="vm.form.endDate" category="vm.form.category"
                                     limit="vm.form.limit"></return-reason-form>
             </section>
+        </div>
+        <div class="row">
             <section id="reasonChart" class="col-md-12">
                 <bar-chart></bar-chart>
             </section>
