added groupby param, removed buggy init data

--- a/src/client/app/features/dashboard/dashboard.html
+++ b/src/client/app/features/dashboard/dashboard.html
@@ -4,7 +4,8 @@
 <container order-form-start-date="vm.OrderFormStartDate"
            order-form-end-date="vm.orderFormEndDate"
            order-form-category="vm.orderFormCategory"
-    order-form-submit="vm.orderFormSubmit"
+           order-form-groupby="vm.orderFormGroupby"
+order-form-submit="vm.orderFormSubmit"
     reason-form-start-date="vm.reasonFormStartDate"
     reason-form-end-date="vm.reasonFormEndDate"
     reason-form-category="vm.reasonFormCategory"
@@ -19,6 +20,7 @@
                 <return-order-form order-form-start-date="vm.OrderFormStartDate"
                                    order-form-end-date="vm.orderFormEndDate"
                                    order-form-category="vm.orderFormCategory"
+                                   order-form-groupby="vm.orderFormGroupby"
                                    order-form-submit="vm.orderFormSubmit"
                     ></return-order-form>
             </section>
