updated href of link

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="/.tmp/styles.css">
     <!-- endinject -->
     <!-- endbuild -->
+
+    <link rel="stylesheet" href="/src/client/styles/styles.css">
 </head>
 <body>
     <div>
